# Pyhf-to-Combine-converter

./: .gitignore  LICENSE.txt  Makefile  README.md  cabinetry_practice.py  config_example.yml  converted_workspace.json  example_shapes.root  higgsCombineTest.FitDiagnostics.mH120.root  histfactory_practice.py  import json.py  pyhf_convert_to_datacard.py  pyhf_converted_from_datacard.py  pyhf_converted_from_shapes_datacard.py  pyproject.toml  shape_example_ws.json  shape_example_ws.py  to_datacard_practice.txt  to_pyhf_test.py  uproot_practice.py
.github/workflows/: publish-package.yml
Converted shape example/: Shapesys.json  Workspace.json  Workspace.txt  simple_shape.txt
Converters/: converted_datacard.txt  converted_workspace.json  floats_card.txt  higgsCombineTest.FitDiagnostics.mH120.root  pyhf_convert_to_datacard.py  pyhf_converted_from_datacard.py  shape_test.json  shapes.root  simple-shape.txt  test.txt
Converters/Stat_testing/: combine_logger.out  converted_workspace.json  counting_test.json  fitDiagnosticsTest.root  higgsCombineTest.FitDiagnostics.mH120.root  higgsCombineTest.MultiDimFit.mH120.root  pyhf_practice.py  realistic-multi-channel.root  realistic-multi-channel.txt  shape_test.json  shapes.root  simple-shape.root  simple-shape.txt  to_pyhf_test.py  verification_datacard.root  verification_datacard.txt
Converters/Stat_testing/big_model/: converted_datacard.txt
Converters/Stat_testing/multi_vs_single_bin/: higgsCombineTest.MultiDimFit.mH120_1.root  higgsCombineTest.MultiDimFit.mH120_2.root  higgsCombineTest.MultiDimFit.mH120_multi.root  shapes.root  single_bin_1_datacard.txt  single_bin_1_test.json  single_bin_2_datacard.txt  single_bin_2_test.json  two_bin_datacard.txt  two_bin_shapes.root  two_bin_test.json
Converters/Stat_testing/verification_model/: converted_workspace.json  converted_workspace_floats.json  dump_templates.py  floats_card.txt  shapes.root  test.py  (+5 more)
Misc_practice/: uproot_practice.py
Pyhf_workspace_examples/: pyhf_practice.py  pyhf_to_datacard_practice.py  shape_example_ws.json
docker/: Dockerfile
docker/dirty/: Dockerfile
docs/: Main_differences.md  tutorial.bash  tutorial.md  tutorial.py
docs/Twice_translated_card/: verification_datacard.txt  verification_datacard_original.txt
inputs/: data.root  prediction.root
src/: pyhf_convert_to_datacard.py  pyhf_converted_from_datacard.py
src/pyhf_combine_converter/: __init__.py  combine_to_pyhf.py  pyhf_convert_to_datacard.py  pyhf_converted_from_datacard.py  pyhf_to_combine.py
test/: converted_datacard.txt  to_pyhf_test.py
test/Validation/: higgsCombineTest.MultiDimFit.mH120.root
test/big_model/: bottom-squarks.json  converted_datacard.txt  shapes.root
test/multi_vs_single_bin/: higgsCombineTest.MultiDimFit.mH120_1.root  higgsCombineTest.MultiDimFit.mH120_multi.root  single_bin_1_test.json  single_bin_2_test.json  two_bin_datacard.txt
test/verification_model/: higgsCombineTest.MultiDimFit.mH120.root  higgsCombineTest.MultiDimFit.mH120_fitscan.root  shapes-test.root
(+7 files in other folders)
