[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyhf_combine_converter"
authors = [
  { name="Peter Ridolfi", email="petey.ridolfi7@gmail.com" },
]
description = "A package to translate between pyhf and Combine models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pyhf>=0.6.3",
  "uproot>=4.2.3",
  "hist>=2.6.1"
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/peterridolfi/Pyhf-to-Combine-converter"
"Bug Tracker" = "https://github.com/peterridolfi/Pyhf-to-Combine-converter/issues"

[project.scripts]
pyhf-to-combine = "pyhf_combine_converter.pyhf_to_combine:main"
combine-to-pyhf = "pyhf_combine_converter.combine_to_pyhf:main"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/pyhf_combine_converter/version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"
